ifcc-test-output/testfiles-5_not_declared/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:12: error: ‘a’ undeclared (first use in this function)
    2 |     return a
      |            ^
input.c:2:12: note: each undeclared identifier is reported only once for each function it appears in
input.c:2:13: error: expected ‘;’ before ‘}’ token
    2 |     return a
      |             ^
      |             ;
    3 | }
      | ~            

exit status: 1
